--- a/compose.yaml
+++ b/compose.yaml
@@ -3,5 +3,9 @@ services:
     build: .
     ports:
       - "80:80"
+    environment:
+      DEBUG: 1
+    volumes:
+      - ./app:/code/app
   redis:
     image: "redis:alpine"
