--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,7 @@ services:
       - "80:80"
     environment:
       DEBUG: 1
+      REDIS_URL: redis://redis:6379
     volumes:
       - ./app:/code/app
     env_file:
