sort and organize

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-fastapi==0.103.1
-pydantic==2.3.0
-uvicorn==0.23.2
-redis[hiredis]==5.0.0
-python-jose==3.3.0
 aiofiles==23.2.1
+fastapi==0.103.1
+librosa~=0.10.1
+pydantic==2.3.0
 pydub==0.25.1
 pyrubberband==0.3.0
+python-jose==3.3.0
+python-multipart==0.0.6
+redis[hiredis]==5.0.0
+scipy==1.10.1
 soundfile==0.12.1
-librosa~=0.10.1
+uvicorn==0.23.2
