--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiofiles==23.2.1
+demucs==4.0.1
 fastapi==0.103.1
-librosa~=0.10.1
 pydantic==2.3.0
 pydub==0.25.1
 pyrubberband==0.3.0
@@ -10,3 +10,20 @@ redis[hiredis]==5.0.0
 scipy==1.10.1
 soundfile==0.12.1
 uvicorn==0.23.2
+dora-search>=0.1.12
+diffq>=0.2.1
+einops
+flake8
+hydra-colorlog>=1.1
+hydra-core>=1.1
+julius>=0.2.3
+lameenc>=1.2
+museval
+mypy
+openunmix
+pyyaml
+submitit
+torch>=1.8.1
+torchaudio>=0.8
+tqdm
+treetable
