change off vocal endpoint to use vocal-remover

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,10 @@
 aiofiles==23.2.1
-demucs==4.0.1
 fastapi==0.103.1
-pydantic==2.3.0
 pydub==0.25.1
 pyrubberband==0.3.0
-python-jose==3.3.0
-python-multipart==0.0.6
 redis[hiredis]==5.0.0
 scipy==1.10.1
-soundfile==0.12.1
 uvicorn==0.23.2
-dora-search>=0.1.12
-diffq>=0.2.1
-einops
-flake8
-hydra-colorlog>=1.1
-hydra-core>=1.1
-julius>=0.2.3
-lameenc>=1.2
-museval
-mypy
-openunmix
-pyyaml
-submitit
-torch>=1.8.1
-torchaudio>=0.8
-tqdm
-treetable
+soundfile~=0.11.0
+audio-separator>=0.8.0
+joblib~=1.3.2
